--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/Views/ShareWith/PrivateShareWithView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/Views/ShareWith/PrivateShareWithView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,16 +16,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ejt-RW-Ffa">
-                    <rect key="frame" x="16" y="18" width="382" height="16"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="16" id="6MP-g9-TCO"/>
-                    </constraints>
+                    <rect key="frame" x="16" y="18" width="382" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="lUO-0C-FT7">
-                    <rect key="frame" x="0.0" y="44" width="414" height="20"/>
+                    <rect key="frame" x="0.0" y="48.5" width="414" height="15.5"/>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0up-yr-2e7">
                     <rect key="frame" x="16" y="79" width="382" height="1"/>
@@ -37,7 +34,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="uNQ-D7-08u"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="filesBackground"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="0up-yr-2e7" secondAttribute="bottom" id="91j-Ix-tLg"/>
                 <constraint firstAttribute="trailing" secondItem="lUO-0C-FT7" secondAttribute="trailing" id="AP3-4e-TAx"/>
@@ -59,8 +56,8 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="filesBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
