--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/Views/Duration/PrivateShareDurationCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/Views/Duration/PrivateShareDurationCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,21 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PrivateShareDurationCell" customModule="lifebox" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="258" height="25"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PrivateShareDurationCell" customModule="Billo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="236" height="78"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="258" height="25"/>
+                <rect key="frame" x="0.0" y="0.0" width="236" height="78"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GAi-hr-PtK">
-                        <rect key="frame" x="0.0" y="0.0" width="258" height="25"/>
+                        <rect key="frame" x="4" y="8" width="228" height="62"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQd-EJ-0rb">
-                                <rect key="frame" x="10" y="0.0" width="238" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="26f-gY-te4"/>
-                                </constraints>
+                                <rect key="frame" x="16" y="0.0" width="196" height="62"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -34,26 +31,26 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="PQd-EJ-0rb" firstAttribute="top" secondItem="GAi-hr-PtK" secondAttribute="top" id="1qZ-ym-55r"/>
-                            <constraint firstItem="PQd-EJ-0rb" firstAttribute="leading" secondItem="GAi-hr-PtK" secondAttribute="leading" constant="10" id="9Gl-KE-exC"/>
+                            <constraint firstItem="PQd-EJ-0rb" firstAttribute="leading" secondItem="GAi-hr-PtK" secondAttribute="leading" constant="16" id="9Gl-KE-exC"/>
                             <constraint firstAttribute="bottom" secondItem="PQd-EJ-0rb" secondAttribute="bottom" id="EXi-ZI-s83"/>
-                            <constraint firstAttribute="trailing" secondItem="PQd-EJ-0rb" secondAttribute="trailing" constant="10" id="cv5-bQ-SzD"/>
+                            <constraint firstAttribute="trailing" secondItem="PQd-EJ-0rb" secondAttribute="trailing" constant="16" id="cv5-bQ-SzD"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="GAi-hr-PtK" secondAttribute="trailing" id="P3v-Md-jAE"/>
-                <constraint firstAttribute="bottom" secondItem="GAi-hr-PtK" secondAttribute="bottom" id="ey0-fd-c7r"/>
-                <constraint firstItem="GAi-hr-PtK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="u4e-dZ-jJO"/>
-                <constraint firstItem="GAi-hr-PtK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="y7p-K7-szV"/>
+                <constraint firstAttribute="trailing" secondItem="GAi-hr-PtK" secondAttribute="trailing" constant="4" id="P3v-Md-jAE"/>
+                <constraint firstAttribute="bottom" secondItem="GAi-hr-PtK" secondAttribute="bottom" constant="8" id="ey0-fd-c7r"/>
+                <constraint firstItem="GAi-hr-PtK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="u4e-dZ-jJO"/>
+                <constraint firstItem="GAi-hr-PtK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="y7p-K7-szV"/>
             </constraints>
-            <size key="customSize" width="258" height="25"/>
+            <size key="customSize" width="236" height="78"/>
             <connections>
                 <outlet property="borderView" destination="GAi-hr-PtK" id="pwi-fo-SJQ"/>
                 <outlet property="titleLabel" destination="PQd-EJ-0rb" id="ivo-Uj-Pva"/>
             </connections>
-            <point key="canvasLocation" x="288.40579710144931" y="96.09375"/>
+            <point key="canvasLocation" x="272.46376811594206" y="113.83928571428571"/>
         </collectionViewCell>
     </objects>
     <resources>
