--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/Views/Suggestions/PrivateShareContactSuggestionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/Views/Suggestions/PrivateShareContactSuggestionView.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -30,7 +30,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" name="filesBackground"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="dhl-EW-2px" secondAttribute="bottom" id="C8n-eY-JbJ"/>
                                 <constraint firstItem="dhl-EW-2px" firstAttribute="top" secondItem="Wji-ww-wcm" secondAttribute="top" id="Qpx-uv-lMd"/>
@@ -41,7 +41,7 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="filesBackground"/>
             <constraints>
                 <constraint firstItem="tmO-pc-9rc" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="3tg-yi-j0o"/>
                 <constraint firstItem="tmO-pc-9rc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="Q9f-pz-NMb"/>
@@ -58,8 +58,8 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="filesBackground">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
