--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/PeopleCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/PeopleCollectionViewCell.xib
@@ -1,59 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PeopleCollectionViewCell" customModule="LifeTech_lifedrive" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="140" height="160"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PeopleCollectionViewCell" customModule="Billo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="74" height="106"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="140" height="160"/>
+                <rect key="frame" x="0.0" y="0.0" width="74" height="106"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yxa-2Z-6aZ">
-                        <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yxa-2Z-6aZ">
+                        <rect key="frame" x="4" y="8" width="66" height="66"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L55-nY-km9" customClass="LoadingImageView" customModule="LifeTech_lifedrive" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L55-nY-km9" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
+                                <rect key="frame" x="2" y="2" width="62" height="62"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="L55-nY-km9" firstAttribute="leading" secondItem="yxa-2Z-6aZ" secondAttribute="leading" id="6Mc-TS-oPN"/>
+                            <constraint firstItem="L55-nY-km9" firstAttribute="leading" secondItem="yxa-2Z-6aZ" secondAttribute="leading" constant="2" id="6Mc-TS-oPN"/>
                             <constraint firstAttribute="width" secondItem="yxa-2Z-6aZ" secondAttribute="height" multiplier="1:1" id="9Js-xj-yEo"/>
-                            <constraint firstAttribute="bottom" secondItem="L55-nY-km9" secondAttribute="bottom" id="Jwj-M6-laY"/>
-                            <constraint firstAttribute="trailing" secondItem="L55-nY-km9" secondAttribute="trailing" id="aw1-ul-JNy"/>
-                            <constraint firstItem="L55-nY-km9" firstAttribute="top" secondItem="yxa-2Z-6aZ" secondAttribute="top" id="dbS-z8-s4t"/>
+                            <constraint firstAttribute="bottom" secondItem="L55-nY-km9" secondAttribute="bottom" constant="2" id="Jwj-M6-laY"/>
+                            <constraint firstAttribute="trailing" secondItem="L55-nY-km9" secondAttribute="trailing" constant="2" id="aw1-ul-JNy"/>
+                            <constraint firstItem="L55-nY-km9" firstAttribute="top" secondItem="yxa-2Z-6aZ" secondAttribute="top" constant="2" id="dbS-z8-s4t"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHD-Iq-rwd">
-                        <rect key="frame" x="0.0" y="140" width="140" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="KP6-nE-JsT"/>
-                        </constraints>
+                        <rect key="frame" x="0.0" y="78" width="74" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="yxa-2Z-6aZ" secondAttribute="trailing" id="NrV-hG-z7L"/>
-                <constraint firstItem="wHD-Iq-rwd" firstAttribute="top" secondItem="yxa-2Z-6aZ" secondAttribute="bottom" id="OlA-17-Mgv"/>
+                <constraint firstItem="yxa-2Z-6aZ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="GE7-1d-JtX"/>
+                <constraint firstAttribute="trailing" secondItem="yxa-2Z-6aZ" secondAttribute="trailing" constant="4" id="HVT-kP-ZJ5"/>
+                <constraint firstItem="wHD-Iq-rwd" firstAttribute="top" secondItem="yxa-2Z-6aZ" secondAttribute="bottom" constant="4" id="OlA-17-Mgv"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wHD-Iq-rwd" secondAttribute="bottom" id="XBk-i5-zFD"/>
-                <constraint firstItem="yxa-2Z-6aZ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="siq-ga-uvd"/>
-                <constraint firstItem="yxa-2Z-6aZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="tGR-O8-nWs"/>
                 <constraint firstItem="wHD-Iq-rwd" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xL4-2o-03J"/>
+                <constraint firstItem="yxa-2Z-6aZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="xxa-Hf-cDF"/>
                 <constraint firstAttribute="trailing" secondItem="wHD-Iq-rwd" secondAttribute="trailing" id="zD8-ep-Ke9"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="140" height="160"/>
             <connections>
                 <outlet property="thumbnail" destination="L55-nY-km9" id="OEH-nt-PZA"/>
@@ -63,4 +61,9 @@
             <point key="canvasLocation" x="202.89855072463769" y="163.39285714285714"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
